--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.ico" />
-  <title>Smooth Scrolling</title>
+  <title>We think elastic</title>
 </head>
 
 <body
